# FlagGems-Experimental

./: .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml  setup.sh
.github/: CODEOWNERS  backends.json  labeler.yml
benchmark/: base.py  core_shapes.yaml  test_ReduceArgMax.py  test_ReduceArgMin.py  test_arctan_.py  test_binary_cross_entropy_with_logits.py  test_bitwise_left_shift_.py  test_bitwise_xor.py  test_blas_perf_parallel.py  test_cat.py  test_conj.py  test_copysign_.py  test_deepseek_v4_attention_compute_global_topk_indices_and_lens.py  test_deg2rad.py  test_dgeglu.py  test_digamma.py  test_div.py  test_dreglu.py  test_dswiglu.py  test_floor_divide.py  test_fmax.py  test_fp8_einsum.py  test_fp8_fp4_mega_moe.py  test_gather_block_quantized.py  test_geglu.py  test_grid_sample.py  test_gt_scalar_.py  test_gt_tensor_.py  test_hardshrink.py  test_hardsigmoid_backward.py  test_hardswish_backward.py  test_hardtanh_backward.py  test_hstack.py  test_index.py  test_lift.py  test_linalg_cholesky_ex.py  test_linalg_eigvalsh.py  test_linalg_ldl_factor.py  test_linalg_slogdet.py  test_linear_backward.py  (+55 more)
conf/: operators.yaml
container/: build.py  configs.yaml
cpp/: pyproject.toml
ctests/: CMakeLists.txt
examples/: model_bert_test.py
lib/: CMakeLists.txt  utils.cpp
requirements/: requirements_aipu.txt  requirements_ascend.txt  requirements_enflame.txt  requirements_hcu.txt  requirements_iluvatar.txt  requirements_metax.txt  requirements_mthreads.txt  requirements_nvidia.txt  requirements_sunrise.txt  requirements_tsingmicro.txt  requirements_xpu.txt
tests/: accuracy_utils.py  test_ReduceArgMax.py  test_ReduceArgMin.py  test_conj.py  (+108 more)
(+377 files in other folders)
